# rosbot2

./: .env  Dockerfile.explore_lite  Dockerfile.navigation  Dockerfile.path_tools  Dockerfile.scan_filter  README.md  compose.route.yml  compose.simulation.yaml  compose.yaml  docker-compose.oak-off.yml  docker-compose.override.yml  docker-compose.patrol.yml  ekf-config.override.yml  foxglove-hostfix.override.yml  justfile  override-rosbot.yml
config/: ekf.yaml  ekf_internal_off.yaml  ekf_odom.yaml  explore_params.yaml  laser_filters.yaml  layout.json  nav2_dwb_params.yaml  nav2_dwb_webots_params.yaml  nav2_mppi_params.yaml  nav2_mppi_webots_params.yaml  nav2_rpp_params.yaml  nav2_rpp_webots_params.yaml  oak_1080p.yaml  oak_720p.yaml  oak_params.yaml  scan_filters.yaml  twist_mux.yaml
docs/: auto_loop_es.md
maps/: almacen.pgm  almacen.yaml  map.pgm  map.yaml  map_final.pgm  map_final.yaml  mapa_nave.pgm  mapa_nave.yaml
path_tools/: tf_odom_bridge.py
rosbotxl/: docker-compose.override.yml
rosbotxl/rosbotxl_auto/: package.xml  setup.py
rosbotxl/rosbotxl_auto/rosbotxl_auto/: auto_loop.launch.py  loop_rect.py
rosbotxl/scripts/: loop_rect.py
scripts/: auto_localize.py  clear_costmaps.sh  lidar_overlay.py  lint_routes.py  localization_entrypoint.sh  nav2_action_probe.py  nav2_guard.py  nav2_preflight.py  nav_diag.sh  nav_through_poses.py  path_player.py  path_player_ntp.py  path_recorder.py  ros_diag.sh  start_navigation_with_ekf.sh  wait_for_tf.py
scripts/bt/: ntp_force_follow.xml
tools/: apply_waypoint_tuning.sh  fix_lidar_and_local_costmap.sh
