<?xml version="1.0"?>
<package format="3">
  <name>rosbotxl_auto</name>
  <version>0.1.0</version>
  <description>Auto loop utilities for ROSbot XL</description>
  <maintainer email="example@example.com">Example Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
</package>
